samples/_failures_safe/1761143863_a7c373_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_985e6139.c: In function ‘main’:
./samples/SAFE/__tmp_985e6139.c:170:17: error: expected ‘;’ at end of input
  170 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_985e6139.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_985e6139.c:170:9: error: expected declaration or statement at end of input
